@@ -11,7 +11,7 @@
   </scm>
 
   <properties>
-    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+    <argLine>-XX:+EnableDynamicAgentLoading --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
     <exposed.version>0.56.0</exposed.version>
     <flyway.version>10.11.0</flyway.version>
     <jda.version>5.6.1</jda.version>
@@ -22,7 +22,7 @@
     <kotlin.version>2.3.0</kotlin.version>
     <kotest.version>5.9.1</kotest.version>
     <main.class>tech.gdragon.App</main.class>
-    <mockk.version>1.14.2</mockk.version>
+    <mockk.version>1.14.7</mockk.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <slf4j.version>2.0.9</slf4j.version>
     <log4j.version>2.24.3</log4j.version>
